added refresh token for auto login, added logout endpoint
