# users/urls.py
@@ -1,6 +1,6 @@
 from django.urls import path
 
-from .views.user_views import UserDetailsList, UserPreferencesPayloadView
+from .views.user_views import UserDetailsList, UserPreferencesPayloadView, CurrentUserView
 from .views.user_preferences_views import UserPreferencesView
 from .views.auth_views import LoginView, ValidateUniqueView, RegisterView
 from .views.city_views import CityPayloadView
@@ -8,10 +8,13 @@ from .views.questionnaire_views import QuestionnaireView, UserResponseView
 from .views.user_update_views import UpdatePasswordView, UpdateUserDetailsView
 from .views.device_token_views import DeviceTokenView
 from .views.user_like_views import UserLikeView
+from .views.token_refresh_views import TokenRefreshView
+from .views.logout_views import LogoutView
 
 
 users_urlpatterns = [
     path('user-details/', UserDetailsList.as_view(), name='user-details'),
+    path('me/', CurrentUserView.as_view(), name='current-user'),
     path('preferences/payload/', UserPreferencesPayloadView.as_view(), name='user-preferences-payload'),
     path('preferences/', UserPreferencesView.as_view(), name='user-preferences'),
     path('update-password/', UpdatePasswordView.as_view(), name='update-password'),
@@ -23,8 +26,10 @@ users_urlpatterns = [
 auth_urlpatterns = [
     path('register/', RegisterView.as_view(), name='register'),
     path('login/', LoginView.as_view(), name='login'),
+    path('logout/', LogoutView.as_view(), name='logout'),
     path('validate-unique/', ValidateUniqueView.as_view(), name='validate-unique'),
     path('payload/', CityPayloadView.as_view(), name='city-payload'),
+    path('token/refresh/', TokenRefreshView.as_view(), name='token-refresh'),
 ]
 
 questionnaire_urlpatterns = [
